[package]
name = "searcher-reth-repository"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true



[dependencies]
reth-revm.workspace = true
eyre.workspace = true
tokio.workspace = true

sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
searcher-reth-path-finder.workspace = true
searcher-reth-types.workspace = true
migration.workspace = true

